# asterix4py

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
asterix4py/: AsterixEncoder.py  AsterixParser.py  common.py
asterix4py/config/: asterix_cat034_1_27.xml  asterix_cat034_1_28.xml  asterix_cat034_1_29.xml
example/: ast48.py  ast62.py  ast62_ehs_daps_age_survey.py  ast62_plotlist.py  ast62_plotlist_bigfile.py  ast62_plotlist_departures.py  hexstring.py
src/asterix4py/: AsterixEncoder.py  AsterixParser.py  __init__.py  common.py  icao6bitchars.py
src/asterix4py/config/: asterix.dtd  asterix_cat001_1_1.xml  asterix_cat008_1_0.xml  asterix_cat020_1_7.xml  asterix_cat021_0_26.xml  asterix_cat021_2_2.xml  asterix_cat030_6_2.xml  asterix_cat031_6_2.xml  asterix_cat032_6_2.xml  asterix_cat032_7_0.xml  asterix_cat034_1_26.xml  asterix_cat034_1_29.xml  asterix_cat048_1_14.xml  asterix_cat062_0_17.xml  asterix_cat062_1_16.xml  asterix_cat062_1_7.xml  asterix_cat062_1_9.xml  asterix_cat063_1_3.xml  asterix_cat065_1_2.xml  asterix_cat065_1_3.xml  asterix_cat242_1_0.xml  asterix_cat252_6_1.xml  asterix_cat252_6_2.xml  asterix_cat252_7_0.xml
test/: test_asterix_decoder.py  test_asterix_encoder.py  testing_data.py
