[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asterix4py"
version = "2"
description = "Pure python library for decoding Eurocontrol Asterix binary data."
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Filip Jonckers"},
]
dynamic = ["readme"]

[project.urls]
BugReports = "https://github.com/filipjonckers/asterix4py/issues"
Source = "https://github.com/filipjonckers/asterix4py"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asterix4py = ["config/*.xml"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
