[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "asterix4py"
version = "2"
readme = "README.md"
description = "Pure python library for decoding Eurocontrol Asterix binary data."
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Filip Jonckers"},
]

[project.urls]
BugReports = "https://github.com/filipjonckers/asterix4py/issues"
Source = "https://github.com/filipjonckers/asterix4py"

