[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "asterix4py"
version = "2.0.1"
readme = "README.md"
description = "Pure python library for decoding Eurocontrol Asterix binary data."
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [
    {name = "Filip Jonckers"},
    {name = "Jam Hernandez Quiceno"},
]

[project.urls]
BugReports = "https://github.com/filipjonckers/asterix4py/issues"
Source = "https://github.com/filipjonckers/asterix4py"

